<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    />
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:hapticFeedbackEnabled="true" android:text="@string/daily_tracking" android:id="@+id/ButtonDailyTracking"></Button>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wods" android:id="@+id/ButtonWods"></Button>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/personal_records" android:id="@+id/ButtonPersonalRecords"></Button>



<ListView android:id="@+id/ListView01" android:layout_width="wrap_content" android:layout_height="wrap_content"></ListView>

</LinearLayout>
